Ability to search and link work item
Ability to search and link work item

Changelog: added

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -26165,6 +26165,9 @@ msgstr ""
 msgid "Item with ID: %{id} cannot be added. You don't have permission to perform this action."
 msgstr ""
 
+msgid "Items are already linked"
+msgstr ""
+
 msgid "Iteration"
 msgstr ""
 
@@ -53534,9 +53537,6 @@ msgstr ""
 msgid "Work item promoted successfully."
 msgstr ""
 
-msgid "Work items are already linked"
-msgstr ""
-
 msgid "WorkItem|%{count} more assignees"
 msgstr ""
 
@@ -53559,6 +53559,9 @@ msgid "WorkItem|Add %{workItemType}"
 msgstr ""
 
 msgid "WorkItem|Add %{workItemType}s"
+msgstr ""
+
+msgid "WorkItem|Add a maximum of 3 items at a time."
 msgstr ""
 
 msgid "WorkItem|Add a title"
@@ -53719,6 +53722,9 @@ msgstr ""
 msgid "WorkItem|Objective"
 msgstr ""
 
+msgid "WorkItem|Only 3 items can be added at a time."
+msgstr ""
+
 msgid "WorkItem|Only project members with at least the Reporter role, the author, and assignees can view or be notified about this %{workItemType}."
 msgstr ""
 
@@ -53779,6 +53785,9 @@ msgstr ""
 msgid "WorkItem|Something went wrong when trying to create a child. Please try again."
 msgstr ""
 
+msgid "WorkItem|Something went wrong when trying to link a item. Please try again."
+msgstr ""
+
 msgid "WorkItem|Something went wrong while copying the %{workItemType} email address. Please try again."
 msgstr ""
 
@@ -53827,6 +53836,15 @@ msgstr ""
 msgid "WorkItem|Test case"
 msgstr ""
 
+msgid "WorkItem|The current key result"
+msgstr ""
+
+msgid "WorkItem|The current objective"
+msgstr ""
+
+msgid "WorkItem|The current task"
+msgstr ""
+
 msgid "WorkItem|This %{workItemType} is confidential and should only be visible to team members with at least Reporter access"
 msgstr ""
 
@@ -53855,6 +53873,21 @@ msgid "WorkItem|Work items"
 msgstr ""
 
 msgid "WorkItem|You're only seeing %{boldStart}other activity%{boldEnd} in the feed. To add a comment, switch to one of the following options."
+msgstr ""
+
+msgid "WorkItem|blocks"
+msgstr ""
+
+msgid "WorkItem|is blocked by"
+msgstr ""
+
+msgid "WorkItem|item"
+msgstr ""
+
+msgid "WorkItem|relates to"
+msgstr ""
+
+msgid "WorkItem|the following item(s)"
 msgstr ""
 
 msgid "Workspaces"
