--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -2336,6 +2336,9 @@ msgstr ""
 msgid "AbuseReport|Go to content"
 msgstr ""
 
+msgid "AbuseReport|Go to epic"
+msgstr ""
+
 msgid "AbuseReport|Go to issue"
 msgstr ""
 
@@ -2400,6 +2403,9 @@ msgid "AbuseReport|Reported comment"
 msgstr ""
 
 msgid "AbuseReport|Reported content"
+msgstr ""
+
+msgid "AbuseReport|Reported epic"
 msgstr ""
 
 msgid "AbuseReport|Reported issue"
