Rename copy of GitHub PR attachments stat
This change updates the "Merge request links" stat to be
called "PR attachments". We use the term "PR" in other similar stats:

- PR mergers
- PR reviews

Changelog: changed

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -21774,13 +21774,13 @@ msgstr ""
 msgid "GithubImporter|Merge request %{merge_request_iid} attachment"
 msgstr ""
 
-msgid "GithubImporter|Merge request links"
-msgstr ""
-
 msgid "GithubImporter|Note attachment"
 msgstr ""
 
 msgid "GithubImporter|Note links"
+msgstr ""
+
+msgid "GithubImporter|PR attachments"
 msgstr ""
 
 msgid "GithubImporter|PR mergers"
