Extract event_hub out of pipelines_table components
To make the pipelines_table component more reusable,
we extract the the event hub and mixin logic out of the
components and instead emit native vue events and let
the wrapper components handle it.

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -34952,7 +34952,7 @@ msgstr ""
 msgid "Pipeline|We are currently unable to fetch pipeline data"
 msgstr ""
 
-msgid "Pipeline|You’re about to stop pipeline #%{pipelineId}."
+msgid "Pipeline|You're about to stop pipeline #%{pipelineId}."
 msgstr ""
 
 msgid "Pipeline|for"
