Rename framework folder to projects
Rename the frameworks folder to projects.
This is in anticipation of adding a new frameworks tab

Changelog: changed
EE: true

--- a/locale/gitlab.pot
+++ b/locale/gitlab.pot
@@ -12327,7 +12327,7 @@ msgstr ""
 msgid "ComplianceReport|Select at least one project to apply the bulk action"
 msgstr ""
 
-msgid "ComplianceReport|Unable to load the compliance framework report. Refresh the page and try again."
+msgid "ComplianceReport|Unable to load the compliance framework projects report. Refresh the page and try again."
 msgstr ""
 
 msgid "ComplianceReport|Unable to load the compliance violations report. Refresh the page and try again."
